footer covered fixed

--- a/resources/assets/styles/templates/_home.scss
+++ b/resources/assets/styles/templates/_home.scss
@@ -1,5 +1,4 @@
 .home-wrapper {
-    background: #000;
     position: relative;
     z-index: 11;
     pointer-events: auto !important;
